--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 serde = {version = "1.0.225", features = ["derive"]}
 serde_json = {version = "1.0.145"}
+
+[dev-dependencies]
+cargo-husky = {version = "1.5.0"}
