--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = {version = "1.0.225", features = ["derive"]}
-serde_json = {version = "1.0.145"}
+chrono = { version = "0.4.42" }
+serde = { version = "1.0.225", features = ["derive"] }
+serde_json = { version = "1.0.145" }
 
 [dev-dependencies]
-cargo-husky = {version = "1.5.0"}
+cargo-husky = { version = "1.5.0" }
